Tomcat 7 and 8 can be selected #41